--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,10 @@ server.port=8800
 # ===============================
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/smsott
+#Local port
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/smsott
+#Server port
+spring.datasource.url=jdbc:mysql://127.0.0.1:9906/smsott
 spring.datasource.username=smsott
 spring.datasource.password=Ak4#29380b
 
@@ -29,7 +32,8 @@ spring.datasource.hikari.auto-commit=true
 # Tu dong tao table
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #================
